--- a/blog/package.json
+++ b/blog/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "vue": "^3.0.4"
+    "element-plus": "^1.0.2-beta.35",
+    "vue": "^3.0.4",
+    "vue-router": "^4.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -19,7 +21,11 @@
     "@vue/cli-service": "~5.0.0-alpha.7",
     "@vue/compiler-sfc": "^3.0.4",
     "eslint": "^7.20.0",
-    "eslint-plugin-vue": "^7.2.0"
+    "eslint-plugin-vue": "^7.2.0",
+    "node-sass": "^5.0.0",
+    "sass-loader": "^11.0.1",
+    "scss-loader": "^0.0.1",
+    "style-loader": "^2.0.0"
   },
   "eslintConfig": {
     "root": true,
